--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
     # Create the Elastic Beanstalk application
     - name: Create EBS application
       run: |
-        eb init -p python-3.8 Flask_Basic --region eu-central-1
+        eb init -p python-3.8 Flask_Basic --region us-east-1
 
     # Deploy to (or Create) the Elastic Beanstalk environment
     - name: Create test environment & deploy
