--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
   deploy:
   # Only run this job if "build" has ended successfully
   needs:
-      - build
+    - build:
 
   runs-on: ubuntu-latest
 
